bin_PROGRAMS = utils
utils_SOURCES =  vec.cpp \
		vecpair.cpp\
	        mat.cpp\
                ivec.cpp \
		IoString.cpp \
		IoStringArray.cpp \
		IoParams.cpp \
		IoPropertyManager.cpp \
		IoFileUtils.cpp \
		IoParamFilter.cpp \
		IoParamSetStats.cpp \
		fmat3d.cpp \
		mmat3d.cpp \
		fparser.cpp \
		fpoptimizer.cpp \
		mersenne.cpp \
		mother.cpp \
		rancombi.cpp

