#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([IoStartGenericGroupApp.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for libraries.



#AC_DEFINE([IO_XERCESCVERSION], ["xercesc_2_8"],
#            [xerces version.])



#if user types XERCESCVERSION=xercesc_2_7
# on the ./configure command line
#then set this variable in the Makefile.in
#we have defined a variable called @XERCESCVERSION@
AC_SUBST(XERCESCVERSION)
if test -z $XERCESCVERSION;
then
    AC_SUBST(XERCESCVERSION,xercesc_2_8)
fi




# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h limits.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_STRTOD
AC_CHECK_FUNCS([ftime gethostbyname gettimeofday localtime_r memmove memset pow select socket sqrt strchr strerror strstr strtoull])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
